@@ -20,7 +20,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Scanner;
@@ -31,21 +30,25 @@ import java.util.Scanner;
 class ReaderWithTxtSamplesTest {
 
     @Test
-    void givenFile_whenRead_thenBuildExpectedClientBankExchange() throws IOException, URISyntaxException {
+    void givenSample_whenRead_thenBuildExpectedClientBankExchange() throws IOException, URISyntaxException {
         assertThat(new ClientBankExchangeReader().read(attributeSourceFromFile())).isEqualTo(expected());
     }
 
     private ClientBankExchange expected() {
+        var date = LocalDate.of(2020, 1, 1);
+        var time = LocalTime.of(10, 0, 0);
+        var amount = new BigDecimal("10.10");
+
         return ClientBankExchange.builder()
                 .formatVersion(1.03f)
                 .encoding(Encoding.WINDOWS)
-                .sender("Бухгалтерия предприятия, редакция 3.0")
-                .receiver("")
-                .creationDate(LocalDate.of(2015, 12, 9))
-                .creationTime(LocalTime.of(10, 33, 20))
-                .startingDate(LocalDate.of(2015, 12, 9))
-                .endingDate(LocalDate.of(2015, 12, 9))
-                .checkingAccount("40702810300180001774")
+                .sender("Отправитель")
+                .receiver("Получатель")
+                .creationDate(date)
+                .creationTime(time)
+                .startingDate(date)
+                .endingDate(date)
+                .checkingAccount("12345678901234567890")
                 .documentTypeList(
                         List.of(
                                 DocumentType.PAYMENT_ORDER,
@@ -53,53 +56,99 @@ class ReaderWithTxtSamplesTest {
                         )
                 )
                 .checkingAccountBalanceList(
-                        Collections.singletonList(
-                                CheckingAccountBalance.builder()
-                                        .startingDate(LocalDate.of(2020, 1, 1))
-                                        .endingDate(LocalDate.of(2020, 1, 1))
-                                        .checkingAccount("123456789")
-                                        .startingBalance(new BigDecimal("100"))
-                                        .totalReceived(new BigDecimal("100.02"))
-                                        .totalDecommissioned(new BigDecimal("100.00"))
-                                        .remainingBalance(new BigDecimal("100.99"))
-                                        .build()
+                        List.of(
+                                checkingAccountBalance(date, amount, "12345678901234567890"),
+                                checkingAccountBalance(date, amount, "12345678901234567891")
                         )
                 )
                 .documentList(
-                        Collections.singletonList(
-                                Document.builder()
-                                        .documentType(DocumentType.PAYMENT_ORDER)
-                                        .number(105)
-                                        .date(LocalDate.of(2015, 12, 9))
-                                        .sum(new BigDecimal("12354.00"))
-                                        .payerAccount("40702810300180001774")
-                                        .payer("ИНН 7719617469 ОАО Крокус")
-                                        .payerInn("7719617469")
-                                        .payer1("ОАО Крокус")
-                                        .payerCheckingAccount("40702810300180001774")
-                                        .payerBank1("АО ОТП БАНК")
-                                        .payerBank2("Г. МОСКВА")
-                                        .payerBic("044525311")
-                                        .payerCorrespondentAccount("30101810000000000311")
-                                        .receiverAccount("40702810123111111114")
-                                        .receiver("ИНН 7701325469 ОАО Прогресс Парк")
-                                        .receiverInn("7701325469")
-                                        .receiver1("ОАО Прогресс Парк")
-                                        .receiverCheckingAccount("40702810123111111114")
-                                        .receiverBank1("ОАО БАНК ПЕТРОКОММЕРЦ")
-                                        .receiverBank2("Г. МОСКВА")
-                                        .receiverBic("044525352")
-                                        .receiverCorrespondentAccount("30101810700000000352")
-                                        .paymentType(PaymentType.POST)
-                                        .paymentPurposeCode(1)
-                                        .transactionType("01")
-                                        .payerKpp("771901001")
-                                        .priority(5)
-                                        .paymentPurpose("Оплата по договору. Сумма 12354-00 без налога (НДС)")
-                                        .paymentPurpose1("Оплата по договору. Сумма 12354-00 без налога (НДС)")
-                                        .build()
+                        List.of(
+                                document(date, time, amount, DocumentType.PAYMENT_ORDER),
+                                document(date, time, amount, DocumentType.PAYMENT_CLAIM)
                         )
                 )
+                .build();
+    }
+
+    private Document document(LocalDate date, LocalTime time, BigDecimal amount, DocumentType documentType) {
+        return Document.builder()
+                .documentType(documentType)
+                .number(1)
+                .date(date)
+                .sum(amount)
+                .receiptDate(date)
+                .receiptTime(time)
+                .receiptContent("КвитанцияСодержание")
+                .payerAccount("12345678901234567890")
+                .decommissionDate(date)
+                .payer("Плательщик")
+                .payerInn("1234567890")
+                .payer1("Плательщик1")
+                .payer2("Плательщик2")
+                .payer3("Плательщик3")
+                .payer4("Плательщик4")
+                .payerCheckingAccount("12345678901234567890")
+                .payerBank1("ПлательщикБанк1")
+                .payerBank2("ПлательщикБанк2")
+                .payerBic("123456789")
+                .payerCorrespondentAccount("12345678901234567890")
+                .receiverAccount("12345678901234567890")
+                .receivingDate(date)
+                .receiver("Получатель")
+                .receiverInn("1234567890")
+                .receiver1("Получатель1")
+                .receiver2("Получатель2")
+                .receiver3("Получатель3")
+                .receiver4("Получатель4")
+                .receiverCheckingAccount("12345678901234567890")
+                .receiverBank1("ПолучательБанк1")
+                .receiverBank2("ПолучательБанк2")
+                .receiverBic("123456789")
+                .receiverCorrespondentAccount("12345678901234567890")
+                .paymentType(PaymentType.POST)
+                .paymentPurposeCode(1)
+                .operationType("01")
+                .code("0")
+                .paymentPurpose("НазначениеПлатежа")
+                .paymentPurpose1("НазначениеПлатежа1")
+                .paymentPurpose2("НазначениеПлатежа2")
+                .paymentPurpose3("НазначениеПлатежа3")
+                .paymentPurpose4("НазначениеПлатежа4")
+                .paymentPurpose5("НазначениеПлатежа5")
+                .paymentPurpose6("НазначениеПлатежа6")
+                .compilerStatus("СтатусСоставителя")
+                .payerKpp("123456789")
+                .receiverKpp("123456789")
+                .cbcIndicator("12345678901234567890")
+                .oktmo("12345678901")
+                .basisIndicator("12")
+                .periodIndicator("1234567890")
+                .numberIndicator("ПоказательНомера")
+                .dateIndicator(date)
+                .typeIndicator("1")
+                .priority(1)
+                .acceptanceTerm(1)
+                .letterOfCreditType("ВидАккредитива")
+                .paymentTerm(date)
+                .paymentCondition1("УсловиеОплаты1")
+                .paymentCondition2("УсловиеОплаты2")
+                .paymentCondition3("УсловиеОплаты3")
+                .paymentOnPresentation("ПлатежПоПредст")
+                .additionalConditions("ДополнУсловия")
+                .supplierAccountNumber("12345678901234567890")
+                .documentDispatchDate(date)
+                .build();
+    }
+
+    private CheckingAccountBalance checkingAccountBalance(LocalDate date, BigDecimal amount, String account) {
+        return CheckingAccountBalance.builder()
+                .startingDate(date)
+                .endingDate(date)
+                .checkingAccount(account)
+                .startingBalance(amount)
+                .totalReceived(amount)
+                .totalDecommissioned(amount)
+                .remainingBalance(amount)
                 .build();
     }
 
@@ -110,7 +159,7 @@ class ReaderWithTxtSamplesTest {
                                 Objects.requireNonNull(
                                                 getClass()
                                                         .getClassLoader()
-                                                        .getResource("1CClientBankExchange.txt")
+                                                        .getResource("sample.txt")
                                         )
                                         .toURI()
                         ),
